--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "express": "^4.18.2",
     "graphql": "^16.11.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1"
+    "mongoose": "^8.14.1",
+    "stripe": "^18.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
