--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "dependencies": {
     "@stripe/react-stripe-js": "^3.7.0",
-    "@stripe/stripe-js": "^7.3.0"
+    "@stripe/stripe-js": "^7.3.0",
+    "bcryptjs": "^3.0.2"
   }
 }
